LU-5781 osc: osc_lock_weight endless loop fix

With huge number of pages to scan by osc_lock_weight() it is likely
CLP_GANG_RESCHED is returned from osc_page_gang_lookup() and the scan will be
repeated again from the start. To be sure that the scan is progressing across
those restarts, next scan should be started from the last scanned page index
plus one.

Xyratex-bug-id: MRP-2145
Change-Id: I60775f2d8f688029d97ad4fe64f9b2698ed278c8
Signed-off-by: Alexander Zarochentsev <alexander.zarochentsev@seagate.com>